@@ -37,8 +37,8 @@ lbl.education.phd=Doctorat
 lbl.education.pri=General\u0103
 lbl.education.sec=Liceu
 lbl.enter-password-for=Introduce\u021Bi parola pentru {0}
-lbl.gender.feminine=F
-lbl.gender.masculine=M
+lbl.gender.feminine=Feminin
+lbl.gender.masculine=Masculin
 lbl.help=Ajutor
 lbl.home-page=Pagina web a aplica\u021Biei
 lbl.manage-participants=Gestionare participan\u021Bi
